--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="btnSwitchScanners">Switch Scanners</string>
     <string name="btnDownloadData"> Download Data and Populate Inner DB</string>
     <string name="btnUploadXMLtoDB">Populate Inner DB</string>
+    <string name="btnCheckConnectivity">Check Login</string>
     <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
     <string name="txtMainTitle">Click on below buttons for options.</string>
     <string name="textInfo">Info</string>
@@ -42,6 +43,7 @@
     <string name="na1">NA</string>
 
 
+
         <string name="row2">row2</string>
         <string name="row3" >row3</string>
         <string name="row4">row4</string>
@@ -52,4 +54,7 @@
         <string name="row9" >row9</string>
         <string name="row10">row10</string>
         <string name="row11" >row11</string>
-    </resources>
+    <string name="Login">Login Info</string>
+    <string name="menu_LoginInfo">Upload File Login Information</string>
+    <string name="user_name">User Name</string>
+</resources>
