Fixed alertdialog in StDet_LoginInfoActivity class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="Login">Login Info</string>
     <string name="menu_LoginInfo">Upload File Login Information</string>
     <string name="user_name">User Name</string>
+    <string name="username">UserName</string>
 </resources>
