--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,6 @@
     <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
     <string name="txtMainTitle">Click on below buttons for options.</string>
     <string name="textInfo">Info</string>
-    <string name="txtPreamble">Preamble</string>
-    <string name="editPreamble"></string>
-    <string name="editPostamble"></string>
-    <string name="txtPostamble">Postamble</string>
     <string name="title_activity_with_fragment">ActivityWithFragment</string>
     <string name="action_settings">Settings</string>
     <string name="data_collector_id">Data Collector Id:</string>
@@ -32,6 +28,7 @@
     <string name="na">NA</string>
     <string name="done">Done</string>
     <string name="_0_0">0.0</string>
+    <string name="Max_Depth">Max Depth</string>
     <string name="manual">Manual</string>
     <string name="save">Save</string>
     <string name="reading">Reading:</string>
