--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="btnUploadXMLtoDB">Populate Lookup DB</string>
     <string name="btnCheckConnectivity">Check Login Credentials</string>
     <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
-    <string name="txtMainTitle">Click on below buttons for options.</string>
+    <string name="txtMainTitle">Click on a button below to proceed</string>
     <string name="textInfo">Info</string>
     <string name="title_activity_with_fragment">ActivityWithFragment</string>
     <string name="action_settings">Settings</string>
@@ -27,9 +27,8 @@
     <string name="loc_id">Loc Id:</string>
     <string name="na">NA</string>
     <string name="done">Done</string>
-    <string name="_0_0">0.0</string>
+    <string name="_0_0"></string>
     <string name="Max_Depth">Max Depth</string>
-    <string name="manual">Manual</string>
     <string name="save">Save</string>
     <string name="reading">Reading:</string>
     <string name="oper_status">Oper Status</string>
@@ -55,4 +54,5 @@
     <string name="menu_LoginInfo">Upload File Login Information</string>
     <string name="user_name">User Name</string>
     <string name="username">UserName</string>
+    <string name="copy_data_to_sd_card">Copy Data to SD Card</string>
 </resources>
